test_suite/tests/ui/default-attribute/tuple_struct_path.stderr
error: struct or field must have #[serde(default)] because previous field 0 have #[serde(default)]
  --> tests/ui/default-attribute/tuple_struct_path.rs:17:39
   |
17 | struct T2(#[serde(default = "d")] u8, u8, u8);
   |                                       ^^

error: struct or field must have #[serde(default)] because previous field 0 have #[serde(default)]
  --> tests/ui/default-attribute/tuple_struct_path.rs:17:43
   |
17 | struct T2(#[serde(default = "d")] u8, u8, u8);
   |                                           ^^
